<resources>
    <string name="app_name">RxJavaDemo</string>
    <string name="card_num">卡号</string>
    <string name="card_validate_time">卡有效期</string>
    <string name="card_cvc">卡cvc码</string>
    <string name="test_btn_1">测试按钮1</string>
    <string name="test_btn_2">测试按钮2</string>
    <string name="test_btn_3">测试按钮3</string>
    <string name="switch_file_browser">切换到文件浏览器页面</string>
    <string name="switch_game_ox">切换到OX游戏页面</string>
    <string name="switch_game_circle4">切换到Circle4游戏页面</string>
    <string name="switch_game_gobang">切换到五子棋游戏页面</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tip">提示</string>
    <string name="storage_permissions_denied">您拒绝了存储空间访问权限，这个页面将会退出。</string>
    <string name="storage_permissions_denied_permanently">您永久拒绝了存储空间访问权限，需要到设置页手动开启吗？</string>
    <string name="previous">P R E V I O U S</string>
    <string name="root">【R O O T】</string>
    <string name="empty_path_obj">给定的路径为空。</string>
    <string name="empty_path_file_list">给定的路径下不包含文件。</string>
    <string name="root_directory_tip">您当前处于根目录。</string>
    <string name="player_in_turn">Player in turn: </string>
    <string name="reset">R E S E T</string>
    <string name="save_game">Save Game</string>
    <string name="load_game">Load Game</string>
    <string name="time_format">yyyy-MM-dd HH:mm:ss.SSS</string><!-- 默认时间格式。 -->
    <string name="save_result">存档结果：</string>
    <string name="no_saved_files">No saved games</string>
    <string name="next">NEXT:</string>
    <string name="delete_saved_game">删除游戏存档：</string>
    <string name="play_time">00:00:00.000</string>
</resources>